--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "ipfs-http-client": "^40.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.6",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
     "web3": "^1.2.4"
